fix swap cutoff

--- a/src/index.css
+++ b/src/index.css
@@ -413,4 +413,8 @@
     --border-radius: 8px;
     --extra-info-bg: #f7f7f7;
     --color-border: transparent;
+    --page-bg: #f9f9f9;
+   
 }
+
+
