--- a/src/pages/Swap/Swap.module.css
+++ b/src/pages/Swap/Swap.module.css
@@ -8,7 +8,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: calc(100vh - 56px);
 
 }
 
@@ -57,6 +56,13 @@
 
 }
 
+
+@media screen  and ( max-width: 780px){
+    .swap_page_container {
+        height: calc(100vh - 56px);
+    
+    }
+}
 @media screen and ( max-width: 780px) {
     .arrow_container, .swap_text{
         display: none;
